# ModalMaker

./: .env.example  .firebaserc  .gitignore  LICENSE  README.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: desktop-build.yml  web-deploy.yml
docs/: PHASE3_STORE_SPLIT_PLAN.md  REFACTOR_PLAN.md
docs/superpowers/plans/: 2026-04-18-modalmaker-improvements-01.md  2026-04-18-multiselect-tabgroup-plan.md
docs/superpowers/specs/: 2026-04-18-modalmaker-improvements-01-design.md  2026-04-18-multiselect-tabgroup-design.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs_export.rs  mod.rs
src/app/: App.tsx
src/features/auth/: AuthButton.tsx  authStore.ts
src/features/canvas/: ButtonLeaf.tsx  Canvas.tsx  CanvasViewport.tsx  DropZone.tsx  NodeRenderer.tsx  PanelLayoutRenderer.tsx  ResizeHandles.tsx  SlotContainerRenderer.tsx  applySizing.ts  canvasViewportConsts.ts  canvasViewportControlsStore.ts  lucideLookup.ts  (+1 more)
src/lib/: cn.ts  firebase.ts  history.ts  id.ts  layoutSizing.test.ts  layoutSizing.ts  logger.ts  migrate.ts  tauri.ts
src/nodes/: NodeHost.tsx  NodeHostCanvas.tsx  NodeHostPreview.tsx  index.ts  nodeHostTypes.ts  registry.ts  types.ts
src/stores/: layoutStore.ts
src/types/: layout.ts
tests/lib/: id.test.ts  layoutSizing.test.ts  migrate.test.ts
tests/stores/: cloneTree.test.ts  commit.test.ts  graph.test.ts
(+94 files in other folders)
