[package]
name = "modalmaker"
version = "0.1.0"
description = "Visual UI layout composer that exports AI-friendly Markdown/JSON"
authors = ["zzamjak-cloud"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "modalmaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
